Use of NSMenu's itemArray breaks compatibility
According to the header: "This property is settable in macOS 10.14 and later."
According to the header: "This property is settable in macOS 10.14 and later."
changed milestone to %4.0
Done.
commit 27a98ee4a92e429e73de9169fbe468b85a6a2940
Author: Felix Paul Kühne <felix@feepk.net>
Date: Sun Feb 2 16:23:20 2020 +0100
macosx/menu: replace implicit 10.14 dependency (closes [#23694](https://code.videolan.org/videolan/vlc/-/issues/23694))
The itemArray property is settable in 10.14 and above only, so this commit adds a work-around to retain support with previous releases of macOS.
added Status::fixed label
closed
VideoLAN code repository instance