macosx/menu: replace implicit 10.14 dependency (closes #23694)

The itemArray property is settable in 10.14 and above only, so this commit adds a work-around to retain support with previous releases of macOS.