modules/gui/macosx/extensions/NSMenu+VLCAdditions.h
@@ -1,0 +1,35 @@
+/*****************************************************************************
+* NSMenu+ItemAddition.h: MacOS X interface module
+*****************************************************************************
+* Copyright (C) 2020 VLC authors and VideoLAN
+*
+* Author: Felix Paul Kühne <fkuehne at videolan dot org>
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston MA 02110-1301, USA.
+*****************************************************************************/
+
+#import <Cocoa/Cocoa.h>
+
+NS_ASSUME_NONNULL_BEGIN
+
+@interface NSMenu (VLCAdditions)
+
+/* NSMenu's property itemArray becomes writeable in 10.14 and above only
+ * so the following is provided as a convenience method to add multiple entries */
+- (void)addMenuItemsFromArray:(NSArray <NSMenuItem *>*)array;
+
+@end
+
+NS_ASSUME_NONNULL_END
